replaced old tests with assignment two (bootstraps)

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,12 @@
-h1 {
-    color:maroon
+/*Task 7*/
+body {
+    background-color:rgb(196, 243, 255)
 }
 
-#first {
-    color:white
+/*Task 10
+@media (max-width: 960px) {
+    .col-md {
+        text-align: justify;
+    }
 }
-
-#third {
-    background-image: linear-gradient(to left, violet, indigo, blue, green,  rgb(197, 197, 47), orange, red);   -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
+*/
