stuff before final project

--- a/scss/custom.css
+++ b/scss/custom.css
@@ -18,7 +18,7 @@
   --bs-white: #fff;
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
-  --bs-primary: #e47171;
+  --bs-primary: #995a5a;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -205,12 +205,12 @@ sup {
 }
 
 a {
-  color: #e47171;
+  color: #995a5a;
   text-decoration: underline;
 }
 
 a:hover {
-  color: #b65a5a;
+  color: #7a4848;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -2073,15 +2073,15 @@ progress {
 }
 
 .table-primary {
-  --bs-table-bg: #fae3e3;
-  --bs-table-striped-bg: #eed8d8;
+  --bs-table-bg: #ebdede;
+  --bs-table-striped-bg: #dfd3d3;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #e1cccc;
+  --bs-table-active-bg: #d4c8c8;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #e7d2d2;
+  --bs-table-hover-bg: #d9cdcd;
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: #e1cccc;
+  border-color: #d4c8c8;
 }
 
 .table-secondary {
@@ -2277,10 +2277,10 @@ progress {
 .form-control:focus {
   color: #212529;
   background-color: #fff;
-  border-color: #f2b8b8;
+  border-color: #ccadad;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(228, 113, 113, 0.25);
-          box-shadow: 0 0 0 0.25rem rgba(228, 113, 113, 0.25);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(153, 90, 90, 0.25);
+          box-shadow: 0 0 0 0.25rem rgba(153, 90, 90, 0.25);
 }
 
 .form-control::-webkit-date-and-time-value {
@@ -2496,10 +2496,10 @@ textarea.form-control-lg {
 }
 
 .form-select:focus {
-  border-color: #f2b8b8;
+  border-color: #ccadad;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(228, 113, 113, 0.25);
-          box-shadow: 0 0 0 0.25rem rgba(228, 113, 113, 0.25);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(153, 90, 90, 0.25);
+          box-shadow: 0 0 0 0.25rem rgba(153, 90, 90, 0.25);
 }
 
 .form-select[multiple], .form-select[size]:not([size="1"]) {
@@ -2572,15 +2572,15 @@ textarea.form-control-lg {
 }
 
 .form-check-input:focus {
-  border-color: #f2b8b8;
+  border-color: #ccadad;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(228, 113, 113, 0.25);
-          box-shadow: 0 0 0 0.25rem rgba(228, 113, 113, 0.25);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(153, 90, 90, 0.25);
+          box-shadow: 0 0 0 0.25rem rgba(153, 90, 90, 0.25);
 }
 
 .form-check-input:checked {
-  background-color: #e47171;
-  border-color: #e47171;
+  background-color: #995a5a;
+  border-color: #995a5a;
 }
 
 .form-check-input:checked[type="checkbox"] {
@@ -2592,8 +2592,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input[type="checkbox"]:indeterminate {
-  background-color: #e47171;
-  border-color: #e47171;
+  background-color: #995a5a;
+  border-color: #995a5a;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 
@@ -2630,7 +2630,7 @@ textarea.form-control-lg {
 }
 
 .form-switch .form-check-input:focus {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23f2b8b8'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23ccadad'/%3e%3c/svg%3e");
 }
 
 .form-switch .form-check-input:checked {
@@ -2671,12 +2671,12 @@ textarea.form-control-lg {
 }
 
 .form-range:focus::-webkit-slider-thumb {
-  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(228, 113, 113, 0.25);
-          box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(228, 113, 113, 0.25);
+  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(153, 90, 90, 0.25);
+          box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(153, 90, 90, 0.25);
 }
 
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(228, 113, 113, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(153, 90, 90, 0.25);
 }
 
 .form-range::-moz-focus-outer {
@@ -2687,7 +2687,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #e47171;
+  background-color: #995a5a;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -2706,7 +2706,7 @@ textarea.form-control-lg {
 }
 
 .form-range::-webkit-slider-thumb:active {
-  background-color: #f7d4d4;
+  background-color: #e0cece;
 }
 
 .form-range::-webkit-slider-runnable-track {
@@ -2722,7 +2722,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #e47171;
+  background-color: #995a5a;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -2741,7 +2741,7 @@ textarea.form-control-lg {
 }
 
 .form-range::-moz-range-thumb:active {
-  background-color: #f7d4d4;
+  background-color: #e0cece;
 }
 
 .form-range::-moz-range-track {
@@ -3180,8 +3180,8 @@ textarea.form-control-lg {
 
 .btn-check:focus + .btn, .btn:focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(228, 113, 113, 0.25);
-          box-shadow: 0 0 0 0.25rem rgba(228, 113, 113, 0.25);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(153, 90, 90, 0.25);
+          box-shadow: 0 0 0 0.25rem rgba(153, 90, 90, 0.25);
 }
 
 .btn:disabled, .btn.disabled,
@@ -3191,44 +3191,44 @@ fieldset:disabled .btn {
 }
 
 .btn-primary {
-  color: #000;
-  background-color: #e47171;
-  border-color: #e47171;
+  color: #fff;
+  background-color: #995a5a;
+  border-color: #995a5a;
 }
 
 .btn-primary:hover {
-  color: #000;
-  background-color: #e88686;
-  border-color: #e77f7f;
+  color: #fff;
+  background-color: #824d4d;
+  border-color: #7a4848;
 }
 
 .btn-check:focus + .btn-primary, .btn-primary:focus {
-  color: #000;
-  background-color: #e88686;
-  border-color: #e77f7f;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(194, 96, 96, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(194, 96, 96, 0.5);
+  color: #fff;
+  background-color: #824d4d;
+  border-color: #7a4848;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(168, 115, 115, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(168, 115, 115, 0.5);
 }
 
 .btn-check:checked + .btn-primary,
 .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active,
 .show > .btn-primary.dropdown-toggle {
-  color: #000;
-  background-color: #e98d8d;
-  border-color: #e77f7f;
+  color: #fff;
+  background-color: #7a4848;
+  border-color: #734444;
 }
 
 .btn-check:checked + .btn-primary:focus,
 .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(194, 96, 96, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(194, 96, 96, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(168, 115, 115, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(168, 115, 115, 0.5);
 }
 
 .btn-primary:disabled, .btn-primary.disabled {
-  color: #000;
-  background-color: #e47171;
-  border-color: #e47171;
+  color: #fff;
+  background-color: #995a5a;
+  border-color: #995a5a;
 }
 
 .btn-secondary {
@@ -3519,36 +3519,36 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary {
-  color: #e47171;
-  border-color: #e47171;
+  color: #995a5a;
+  border-color: #995a5a;
 }
 
 .btn-outline-primary:hover {
-  color: #000;
-  background-color: #e47171;
-  border-color: #e47171;
+  color: #fff;
+  background-color: #995a5a;
+  border-color: #995a5a;
 }
 
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(228, 113, 113, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(228, 113, 113, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(153, 90, 90, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(153, 90, 90, 0.5);
 }
 
 .btn-check:checked + .btn-outline-primary,
 .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
-  color: #000;
-  background-color: #e47171;
-  border-color: #e47171;
+  color: #fff;
+  background-color: #995a5a;
+  border-color: #995a5a;
 }
 
 .btn-check:checked + .btn-outline-primary:focus,
 .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(228, 113, 113, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(228, 113, 113, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(153, 90, 90, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(153, 90, 90, 0.5);
 }
 
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-  color: #e47171;
+  color: #995a5a;
   background-color: transparent;
 }
 
@@ -3792,12 +3792,12 @@ fieldset:disabled .btn {
 
 .btn-link {
   font-weight: 400;
-  color: #e47171;
+  color: #995a5a;
   text-decoration: underline;
 }
 
 .btn-link:hover {
-  color: #b65a5a;
+  color: #7a4848;
 }
 
 .btn-link:disabled, .btn-link.disabled {
@@ -4117,7 +4117,7 @@ fieldset:disabled .btn {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #e47171;
+  background-color: #995a5a;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -4162,7 +4162,7 @@ fieldset:disabled .btn {
 
 .dropdown-menu-dark .dropdown-item.active, .dropdown-menu-dark .dropdown-item:active {
   color: #fff;
-  background-color: #e47171;
+  background-color: #995a5a;
 }
 
 .dropdown-menu-dark .dropdown-item.disabled, .dropdown-menu-dark .dropdown-item:disabled {
@@ -4320,7 +4320,7 @@ fieldset:disabled .btn {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #e47171;
+  color: #995a5a;
   text-decoration: none;
   -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
@@ -4334,7 +4334,7 @@ fieldset:disabled .btn {
 }
 
 .nav-link:hover, .nav-link:focus {
-  color: #b65a5a;
+  color: #7a4848;
 }
 
 .nav-link.disabled {
@@ -4388,7 +4388,7 @@ fieldset:disabled .btn {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #e47171;
+  background-color: #995a5a;
 }
 
 .nav-fill > .nav-link,
@@ -5069,14 +5069,14 @@ fieldset:disabled .btn {
 }
 
 .accordion-button:not(.collapsed) {
-  color: #cd6666;
-  background-color: #fcf1f1;
+  color: #8a5151;
+  background-color: #f5efef;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
           box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
 }
 
 .accordion-button:not(.collapsed)::after {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23cd6666'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%238a5151'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
   -webkit-transform: rotate(-180deg);
           transform: rotate(-180deg);
 }
@@ -5110,10 +5110,10 @@ fieldset:disabled .btn {
 
 .accordion-button:focus {
   z-index: 3;
-  border-color: #f2b8b8;
+  border-color: #ccadad;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(228, 113, 113, 0.25);
-          box-shadow: 0 0 0 0.25rem rgba(228, 113, 113, 0.25);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(153, 90, 90, 0.25);
+          box-shadow: 0 0 0 0.25rem rgba(153, 90, 90, 0.25);
 }
 
 .accordion-header {
@@ -5217,7 +5217,7 @@ fieldset:disabled .btn {
 .page-link {
   position: relative;
   display: block;
-  color: #e47171;
+  color: #995a5a;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #dee2e6;
@@ -5236,18 +5236,18 @@ fieldset:disabled .btn {
 
 .page-link:hover {
   z-index: 2;
-  color: #b65a5a;
+  color: #7a4848;
   background-color: #e9ecef;
   border-color: #dee2e6;
 }
 
 .page-link:focus {
   z-index: 3;
-  color: #b65a5a;
+  color: #7a4848;
   background-color: #e9ecef;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(228, 113, 113, 0.25);
-          box-shadow: 0 0 0 0.25rem rgba(228, 113, 113, 0.25);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(153, 90, 90, 0.25);
+          box-shadow: 0 0 0 0.25rem rgba(153, 90, 90, 0.25);
 }
 
 .page-item:not(:first-child) .page-link {
@@ -5257,8 +5257,8 @@ fieldset:disabled .btn {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #e47171;
-  border-color: #e47171;
+  background-color: #995a5a;
+  border-color: #995a5a;
 }
 
 .page-item.disabled .page-link {
@@ -5363,13 +5363,13 @@ fieldset:disabled .btn {
 }
 
 .alert-primary {
-  color: #894444;
-  background-color: #fae3e3;
-  border-color: #f7d4d4;
+  color: #5c3636;
+  background-color: #ebdede;
+  border-color: #e0cece;
 }
 
 .alert-primary .alert-link {
-  color: #6e3636;
+  color: #4a2b2b;
 }
 
 .alert-secondary {
@@ -5480,7 +5480,7 @@ fieldset:disabled .btn {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #e47171;
+  background-color: #995a5a;
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
@@ -5579,8 +5579,8 @@ fieldset:disabled .btn {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #e47171;
-  border-color: #e47171;
+  background-color: #995a5a;
+  border-color: #995a5a;
 }
 
 .list-group-item + .list-group-item {
@@ -5776,19 +5776,19 @@ fieldset:disabled .btn {
 }
 
 .list-group-item-primary {
-  color: #894444;
-  background-color: #fae3e3;
+  color: #5c3636;
+  background-color: #ebdede;
 }
 
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #894444;
-  background-color: #e1cccc;
+  color: #5c3636;
+  background-color: #d4c8c8;
 }
 
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #894444;
-  border-color: #894444;
+  background-color: #5c3636;
+  border-color: #5c3636;
 }
 
 .list-group-item-secondary {
@@ -5924,8 +5924,8 @@ fieldset:disabled .btn {
 
 .btn-close:focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(228, 113, 113, 0.25);
-          box-shadow: 0 0 0 0.25rem rgba(228, 113, 113, 0.25);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(153, 90, 90, 0.25);
+          box-shadow: 0 0 0 0.25rem rgba(153, 90, 90, 0.25);
   opacity: 1;
 }
 
@@ -7031,11 +7031,11 @@ fieldset:disabled .btn {
 }
 
 .link-primary {
-  color: #e47171;
+  color: #995a5a;
 }
 
 .link-primary:hover, .link-primary:focus {
-  color: #e98d8d;
+  color: #7a4848;
 }
 
 .link-secondary {
@@ -7468,7 +7468,7 @@ fieldset:disabled .btn {
 }
 
 .border-primary {
-  border-color: #e47171 !important;
+  border-color: #995a5a !important;
 }
 
 .border-secondary {
@@ -8372,7 +8372,7 @@ fieldset:disabled .btn {
 
 /* rtl:end:remove */
 .text-primary {
-  color: #e47171 !important;
+  color: #995a5a !important;
 }
 
 .text-secondary {
@@ -8428,7 +8428,7 @@ fieldset:disabled .btn {
 }
 
 .bg-primary {
-  background-color: #e47171 !important;
+  background-color: #995a5a !important;
 }
 
 .bg-secondary {
